# LWEncryptionMachine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  EncryptionMachine.c  EncryptionMachine.h  Makefile  README.rst  main.c  plantuml_requirements.txt
doc/: cipher-encryption-process.puml
src/: EncryptionMachine.c  EncryptionMachine.h  LWEncryptionMachine.c  LWEncryptionMachine.h  main.c
test/: README.rst  test_suite.c
tests/: README.rst  test_suite.c
